PN-2778 Inizializzati sviluppi
